# gapless-crypto-data

./: CHANGELOG.md  README.md  binance_spot_SOLUSDT-15m_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-1h_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-1m_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-2h_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-30m_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-3m_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-4h_20220910-20250831_3.0y.csv  binance_spot_SOLUSDT-5m_20220910-20250831_3.0y.csv  pyproject.toml
.github/workflows/: documentation-release.yml  documentation.yml  publish.yml
adversarial_test_output/: binance_spot_BTCUSDT-1h_20240101-20240101_0.0y.csv  test_with_gaps.csv
docs/: CURRENT_ARCHITECTURE_STATUS.yaml  PYPI_PUBLISHING_CONFIGURATION.yaml
docs/ultrathink/: README.md  USAGE.md  __main__.py
docs/ultrathink/ci/: __init__.py  gating_logic.py  github_actions.py  pre_commit_hook.py
docs/ultrathink/cli/: __init__.py  __main__.py  ultrathink_cli.py
docs/ultrathink/config/: ultrathink.toml
docs/ultrathink/config/templates/: class.md.j2  default.md.j2  function.md.j2  module.md.j2  variable.md.j2
docs/ultrathink/diffing/: __init__.py  api_differ.py  change_classifier.py  version_tracker.py
docs/ultrathink/generation/: __init__.py  autodoc_builder.py  deprecation_manager.py  stub_generator.py
docs/ultrathink/introspection/: __init__.py  api_extractor.py  package_analyzer.py  signature_hasher.py
docs/ultrathink/storage/api_snapshots/: api_snapshot_2.2.0_2025-09-16.json
docs/ultrathink/storage/generated_docs/api_reference/: AtomicCSVOperations_class.md  BinancePublicDataCollector_class.md  SafeCSVMerger_class.md  UniversalGapFiller_class.md
docs/ultrathink/storage/validation_cache/: completeness_check_20250916_170117.json  completeness_check_20250916_170144.json  completeness_check_20250916_183227.json  completeness_check_20250916_184429.json  completeness_check_20250916_184515.json  completeness_check_20250916_184611.json  doctest_validation_20250916_170117.json  doctest_validation_20250916_183227.json  doctest_validation_20250916_183543.json  doctest_validation_20250916_184429.json  doctest_validation_20250916_184515.json  doctest_validation_20250916_184610.json  doctest_validation_20250916_184621.json
docs/ultrathink/validation/: __init__.py  completeness_checker.py  doctest_validator.py  help_snapshotter.py
examples/: advanced_api_examples.py  basic_data_collection.py  complete_workflow.py  gap_filling_example.py  safe_data_collection.py  simple_api_examples.py
src/gapless_crypto_data/: __init__.py  api.py  cli.py
src/gapless_crypto_data/collectors/: __init__.py  binance_public_data_collector.py
src/gapless_crypto_data/exchanges/: __init__.py
src/gapless_crypto_data/gap_filling/: __init__.py  safe_file_operations.py  universal_gap_filler.py
src/gapless_crypto_data/regression/: __init__.py  regression_detector.py
src/gapless_crypto_data/resume/: __init__.py  intelligent_checkpointing.py
src/gapless_crypto_data/sample_data/: binance_spot_BTCUSDT-1d_20240101-20240102_v2.5.0.csv  binance_spot_BTCUSDT-1d_20240101-20240102_v2.5.0.metadata.json  binance_spot_BTCUSDT-1h_20240101-20240101_0.0y.csv  binance_spot_BTCUSDT-1h_20240101-20240102_0.0y.csv  binance_spot_BTCUSDT-1h_20240101-20240102_0.0y.metadata.json  binance_spot_BTCUSDT-1h_20240101-20240102_v2.5.0.csv  binance_spot_BTCUSDT-1h_20240101-20240102_v2.5.0.metadata.json  binance_spot_BTCUSDT-1h_20250831-20250831_0.0y.csv  binance_spot_BTCUSDT-4h_20250831-20250831_0.0y.csv  binance_spot_ETHUSDT-1h_20240101-20240101_v2.5.0.csv  binance_spot_ETHUSDT-1h_20240101-20240101_v2.5.0.metadata.json  binance_spot_ETHUSDT-1h_20240801-20240801_0.0y.csv  binance_spot_ETHUSDT-1h_20250831-20250831_0.0y.csv  binance_spot_ETHUSDT-4h_20250831-20250831_0.0y.csv  binance_spot_SOLUSDT-15m_20220101-20220101_0.0y.csv  binance_spot_SOLUSDT-15m_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-1h_20220901-20250831_3.0y.csv  binance_spot_SOLUSDT-1h_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-1m_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-2h_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-30m_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-3m_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-4h_20230320-20230328_0.0y.csv  binance_spot_SOLUSDT-5m_20230320-20230328_0.0y.csv
src/gapless_crypto_data/streaming/: __init__.py  memory_streaming.py
src/gapless_crypto_data/utils/: __init__.py  error_handling.py
test_data/: binance_spot_BTCUSDT-1h_20240101-20240101_v2.5.0.csv
test_data_large/: binance_spot_BTCUSDT-1h_20140101-20240101_v2.5.0.csv
test_gaps/: test_data_with_gaps.csv
test_py_output/: binance_spot_BTCUSDT-1h_20240101-20240101_0.0y.csv
test_run_clean/: binance_spot_BTCUSDT-1h_20240101-20240101_0.0y.metadata.json  binance_spot_ETHUSDT-1h_20240101-20240101_0.0y.metadata.json  binance_spot_SOLUSDT-1h_20240101-20240101_0.0y.metadata.json  binance_spot_SOLUSDT-4h_20240101-20240101_0.0y.metadata.json
tests/: __init__.py  test_atomic_operations.py  test_binance_collector.py  test_cli.py  test_cli_integration.py  test_gap_filler.py  test_integration.py  test_package.py  test_regression.py  test_simple_api.py  test_streaming.py
